# fletcher

./: .env.example  .gitignore  CLEANUP_GUIDE.md  CONTAINER_ISOLATION.md  Dockerfile  README.md  pyproject.toml  requirements.txt
agent_manager/: __init__.py  cli.py  container_process.py  docker_utils.py  manager.py  process.py  store.py  utils.py
app/: __init__.py  cli.py  docker_utils.py  store.py  utils.py
fletcher/: container_process.py  manager.py
tests/: __init__.py  test_manager.py
