[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fletcher"
version = "0.1.0"
description = "Run Claude Code in isolated containers while syncing with your IDE"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Fletcher Team"}
]
dependencies = [
    "click>=8.0",
    "gitpython>=3.1",
    "tabulate>=0.9",
    "python-dotenv>=1.0",
]

[project.scripts]
fl = "fletcher.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fletcher*"]
